main.tf
terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
    }
    kubernetes = {
      source  = "hashicorp/kubernetes"
      version = "~> 2.0"
    }
    helm = {
      source  = "hashicorp/helm"
      version = "~> 2.0"
    }
  }

  backend "s3" {
    bucket         = "omer-cloudio-tf-state"
    key            = "cloudio/terraform.tfstate"
    region         = "us-east-1"
    dynamodb_table = "terraform-state-lock"
    encrypt        = true
  }
}

provider "aws" {
  region = "eu-west-1"
}

provider "kubernetes" {
  config_path = "~/.kube/config"
  insecure    = true
}

provider "helm" {
  kubernetes {
    config_path = "~/.kube/config"
    insecure    = true
  }
}

locals {
  static_eip   = "63.32.4.109"
  eip_alloc_id = "eipalloc-033d54552a41688a3"
}

resource "aws_instance" "app_server" {
  ami           = "ami-0694d931cee176e7d"
  instance_type = "t3.medium"
  subnet_id     = module.vpc.public_subnets[0]
  
  vpc_security_group_ids = [aws_security_group.web_sg.id]
  iam_instance_profile   = aws_iam_instance_profile.ec2_profile.name
  key_name               = "cloudio-key"

  root_block_device {
    volume_size = 20
  }

  user_data = <<-EOF
    #!/bin/bash
    curl -sfL https://get.k3s.io | sh -
    sleep 45
    sudo chmod 644 /etc/rancher/k3s/k3s.yaml
    export KUBECONFIG=/etc/rancher/k3s/k3s.yaml

    kubectl create namespace cloudio --dry-run=client -o yaml | kubectl apply -f -
    TOKEN=$(aws ecr get-login-password --region eu-west-1)
    kubectl create secret docker-registry ecr-registry-helper \
      --docker-server=102586998566.dkr.ecr.eu-west-1.amazonaws.com \
      --docker-username=AWS \
      --docker-password="$TOKEN" \
      --namespace=cloudio --dry-run=client -o yaml | kubectl apply -f -
  EOF

  tags = { Name = "Cloudio-Server" }
}

resource "aws_eip_association" "eip_assoc" {
  instance_id   = aws_instance.app_server.id
  allocation_id = local.eip_alloc_id
}

resource "aws_security_group_rule" "allow_http" {
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.web_sg.id
}

resource "aws_security_group_rule" "allow_https" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.web_sg.id
}

resource "aws_security_group_rule" "allow_k3s_api" {
  type              = "ingress"
  from_port         = 6443
  to_port           = 6443
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"] 
  security_group_id = aws_security_group.web_sg.id
}

resource "aws_security_group_rule" "allow_nodeports" {
  type              = "ingress"
  from_port         = 30080
  to_port           = 30090
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.web_sg.id
}

resource "aws_security_group_rule" "allow_ssh" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  cidr_blocks       = ["0.0.0.0/0"]
  security_group_id = aws_security_group.web_sg.id
}

resource "aws_ecr_repository" "cloudio_backend" {
  name         = "cloudio-backend"
  force_delete = true
}

resource "aws_ecr_repository" "cloudio_frontend" {
  name         = "cloudio-frontend"
  force_delete = true
}

data "aws_route53_zone" "main" {
  name         = "omerha1.shop"
  private_zone = false
}

resource "aws_route53_record" "root" {
  zone_id = data.aws_route53_zone.main.zone_id
  name    = "omerha1.shop"
  type    = "A"
  ttl     = "300"
  records = [local.static_eip]
}

resource "aws_route53_record" "wildcard" {
  zone_id = data.aws_route53_zone.main.zone_id
  name    = "*.omerha1.shop"
  type    = "A"
  ttl     = "300"
  records = [local.static_eip]
}

resource "helm_release" "argocd" {
  name             = "argocd"
  repository       = "https://argoproj.github.io/argo-helm"
  chart            = "argo-cd"
  namespace        = "argocd"
  create_namespace = true
  version          = "5.46.7"

  set {
    name  = "server.service.type"
    value = "NodePort"
  }
  set {
    name  = "server.service.nodePortHttp"
    value = "30082"
  }
  set {
    name  = "server.extraArgs[0]"
    value = "--insecure"
  }
}

resource "helm_release" "prometheus" {
  name       = "prometheus"
  repository = "https://prometheus-community.github.io/helm-charts"
  chart      = "prometheus"
  namespace  = "monitoring"
  create_namespace = true
  set {
    name  = "server.service.type"
    value = "NodePort"
  }
  set {
    name  = "server.service.nodePort"
    value = "30083"
  }
}

resource "helm_release" "elasticsearch" {
  name       = "elasticsearch"
  repository = "https://helm.elastic.co"
  chart      = "elasticsearch"
  namespace  = "logging"
  create_namespace = true
  set {
    name  = "replicas"
    value = "1"
  }
  set {
    name  = "minimumMasterNodes"
    value = "1"
  }
}

resource "kubernetes_secret" "db_secret" {
  metadata {
    name      = "db-secret"
    namespace = "cloudio"
  }
  data = {
    username = "postgres"
    password = "password123"
    database = "cloudio_db"
  }
  type = "Opaque"
}

resource "kubernetes_service" "cloudio_backend_svc" {
  metadata {
    name      = "cloudio-backend-service"
    namespace = "cloudio"
  }
  spec {
    selector = { app = "cloudio-backend" }
    port {
      port        = 8080
      target_port = 8080
      node_port   = 30081
    }
    type = "NodePort"
  }
}

resource "kubernetes_ingress_v1" "cloudio_ingress" {
  metadata {
    name      = "cloudio-ingress"
    namespace = "cloudio"
    annotations = { "kubernetes.io/ingress.class" = "traefik" }
  }
  spec {
    rule {
      host = "k8s.omerha1.shop"
      http {
        path {
          path = "/"
          path_type = "Prefix"
          backend {
            service {
              name = kubernetes_service.cloudio_backend_svc.metadata[0].name
              port { number = 8080 }
            }
          }
        }
      }
    }
  }
}

resource "kubernetes_ingress_v1" "argocd_ingress" {
  depends_on = [helm_release.argocd]
  
  metadata {
    name      = "argocd-ingress"
    namespace = "argocd"
    annotations = { "kubernetes.io/ingress.class" = "traefik" }
  }
  spec {
    rule {
      host = "argo.omerha1.shop"
      http {
        path {
          path = "/"
          path_type = "Prefix"
          backend {
            service {
              name = "argocd-server"
              port { number = 80 }
            }
          }
        }
      }
    }
  }
}

resource "kubernetes_ingress_v1" "prometheus_ingress" {
  depends_on = [helm_release.prometheus]

  metadata {
    name      = "prometheus-ingress"
    namespace = "monitoring"
    annotations = { "kubernetes.io/ingress.class" = "traefik" }
  }
  spec {
    rule {
      host = "prometheus.omerha1.shop"
      http {
        path {
          path = "/"
          path_type = "Prefix"
          backend {
            service {
              name = "prometheus-server"
              port { number = 80 }
            }
          }
        }
      }
    }
  }
}

resource "null_resource" "fetch_kubeconfig" {
  depends_on = [aws_eip_association.eip_assoc, aws_instance.app_server]

  triggers = {
    instance_id = aws_instance.app_server.id
  }

  provisioner "local-exec" {
    command = "sleep 90 && ssh -o StrictHostKeyChecking=no -i ~/.ssh/cloudio-key.pem ubuntu@${local.static_eip} 'sudo cat /etc/rancher/k3s/k3s.yaml' > ~/.kube/config && sed -i 's/127.0.0.1/${local.static_eip}/g' ~/.kube/config && sed -i 's/certificate-authority-data:.*/insecure-skip-tls-verify: true/g' ~/.kube/config"
  }
}
